@@ -1,3 +1,7 @@
+Sun May 26 22:46:52 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* macros.c (AddMacroArg): Add check on macro argument uniqueness.
+
 Sun May 26 21:54:20 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	src:
